# LambdaOxide

./: .gitignore  Cargo.toml  README.md  comp.sh  compile.sh  core.lam  core.lo  core.rlisp  err.rs  fib.lo  lexer.rs  lib.rs  lisp.rs  lisp.scm  list.rs  mod.rs  parser.rs  self_interpreter.lam  types.rs  utils.rs
examples/: church.lo  py_guile.scm  test_and_tic_tac.lo  tests.lo  timing_church_test.lo
lopiper/: .gitignore  Cargo.toml  README.md  core.lo  example.lp
lopiper/examples/: ir.scm  js.scm  js_std.js  repl.sh
lopiper/examples/clean-electron/: run.py
lopiper/examples/electron/: run.py
lopiper/src/: comp.rs  driver.rs  errors.rs  eval.rs  exp.rs  gentypes.rs  genutils.rs  lexer.rs  main.rs  old_parser.rs  parser.rs  reader.rs  runner.rs  sym_table.rs  types.rs  utils.rs
lopiper/src/old/: driver.old.rs
misc/: TODO  church.lam  generic_traits.rs  lisp.scm  new_sexps.rs  notes.rs  old_lisp.rs  old_stuff.rs  recursive_generic.rs  refcell.rs  rust.notes  servo.notes  table2.rs  table_test  table_test.rs
misc/emscripten/: hello.rs
sicp/: README.md  sicp_ch5
src/: bin.rs  err.rs  lexer.rs  lib.rs  list.rs  main.rs  parser.rs  types.rs  unit_tests.rs  utils.rs
testing/: test.rs
